# minishel

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure.ac  configure~  test.c
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
include/minishell/: builtins.h  exec_command.h  exec_pipeline.h  exec_simple.h  io.h  sh_ctx.h  split_ws.h  vec.h
include/minishell/ast/: ast.h
include/minishell/lexer/: lexer.h  token.h
include/minishell/parser/: parser.h
src/: Makefile  Makefile.am  Makefile.in  main.c  minishell
src/.deps/: main.Po
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c
src/ast/.deps/: ast.Po
src/builtins/: Makefile  Makefile.am  Makefile.in  builtins.c
src/builtins/.deps/: builtins.Po
src/exec/: Makefile  Makefile.am  Makefile.in  exec_command.c  exec_pipeline.c  exec_simple.c
src/exec/.deps/: exec_command.Po  exec_pipeline.Po  exec_simple.Po
src/lexer/: Makefile  Makefile.am  Makefile.in  lexer.c  token.c
src/lexer/.deps/: lexer.Po  token.Po
src/parser/: Makefile  Makefile.am  Makefile.in  parser.c
src/parser/.deps/: parser.Po
src/utils/: Makefile  Makefile.am  Makefile.in  io.c  sh_ctx.c  split_ws.c  vec.c
src/utils/.deps/: io.Po  sh_ctx.Po  split_ws.Po  vec.Po
tests/: Makefile  Makefile.am  Makefile.in
tests/func/: Makefile  Makefile.am  Makefile.in  gen_builtins_tests.sh  gen_expected.sh  run.sh
tests/func/cases/: 020-semi.in  021-and.in  022-and-skip.in  023-or.in  024-or-skip.in  030-great.in  031-dgreat.in  032-less.in  033-ionumber-stdout.in  034-last-wins.expected.out  034-last-wins.in  040-pipe-basic.in  041-pipe-chain.in  042-pipe-redir.in  051-echo-n.in  052-cd.in  053-exit.in
tests/unit/: Makefile  Makefile.am  Makefile.in  test_lexer.c  test_lexer_more.c  test_parser_command.c  test_parser_ops.c  test_vec.c  unit_tests
tests/unit/.deps/: test_lexer.Po  test_lexer_more.Po  test_parser_command.Po  test_parser_ops.Po
